# smart_energy_optimizer

./: .gitignore  run_project.sh  settings.json
src/python_ml_dashboard/: app.py  config.py  data_processor.py  ml_model.py
src/python_ml_dashboard/.streamlit/: cargo.toml
src/rust_data_collector/: Cargo.toml
src/rust_data_collector/src/: lib.rs
